--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
-  </head>
+  <link rel="stylesheet" href="./css/styles.css">
+    </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a class="logo" href="./index.html">Web<span class="Studio"></span></a>
+        <ul class="nav-list list">
+          <li class="nav-item"><a href="./index.html">Студія</a></li>
+          <li class="nav-item"><a href="./portfolio.html">Портфоліо</a></li>
+          <li class="nav-item"><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
